<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <!--xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">-->


    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

    </ListView>

    <item
        android:id="@+id/menu_cancel"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_cancel"/>

    <item
        android:id="@+id/menu_link_event"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/menu_link_event"/>

    <item
        android:id="@+id/menu_new_event"
        android:orderInCategory="104"
        app:showAsAction="never"
        android:title="@string/menu_new_event"/>

    <item
        android:id="@+id/menu_save"
        android:orderInCategory="108"
        app:showAsAction="always"
        android:title="@string/menu_save"/>

</menu>
