<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView android:text="@string/lbl_event_date"
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_event_date"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txt_event_date"
        android:layout_below="@+id/lbl_event_date" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_event_description"
        android:id="@+id/lbl_event_description"
        android:layout_toRightOf="@+id/lbl_event_date"
        android:layout_marginLeft="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="400px"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txt_description"
        android:layout_below="@+id/lbl_event_description"
        android:layout_toRightOf="@+id/txt_event_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_event_title"
        android:id="@+id/lbl_event_title"
        android:layout_toRightOf="@+id/txt_description"
        android:layout_below="@+id/txt_event_date"
        android:layout_marginLeft="2dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/txt_event_title"
        android:layout_toRightOf="@+id/txt_description"
        android:layout_below="@+id/lbl_event_title"
        android:layout_marginLeft="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_event_location"
        android:id="@+id/lbl_event_location"
        android:layout_below="@+id/txt_event_title"
        android:layout_toRightOf="@+id/txt_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/txt_event_location"
        android:layout_below="@+id/lbl_event_location"
        android:layout_toRightOf="@+id/txt_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/lbl_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_event_location"
        android:id="@+id/lbl_activity" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/lst_activity"
        android:layout_below="@+id/lbl_activity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
